# Basic-AMM

./: README.md
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: lib.rs
