[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
arrayref = "0.3.6"
solana-program = "1.10.0"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.3"

[dev-dependencies]
roots = "0.0.7"

